[package]
name = "maze-routing"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.75", features = ["serde-serialize"] }
serde_derive = "1.0.127"
serde_json = "1.0.66"
serde = "1.0.127"

[dev-dependencies]
quickcheck = "0.9.2"
